--- a/views/saleluz_new.handlebars
+++ b/views/saleluz_new.handlebars
@@ -1,7 +1,7 @@
 <section id="inicial">
     <div class="inicial">
 
-        <div class="titulo_evento">
+        <div class="titulo_evento headline">
             <div class="titulo">
                 <h1>SAL</h1>
                 <h1>&</h1>
@@ -15,7 +15,7 @@
             </div>
         </div>
 
-        <div class="evento_descricao">
+        <div class="evento_descricao headline">
             <!-- Aqui começa a descrição do evento -->
             <div class="dias">
                 <h1>9,10 E 11 DE</h1>
@@ -33,7 +33,7 @@
 
 <section id="shop">
     <div class="shop">
-        <div class="shop_imagem">
+        <div class="shop_imagem headline">
             <div class="flip">
                 <div class="front">
                     <img src="img/SAL_E_LUZ/BLUSA_03.png" />
@@ -51,7 +51,7 @@
                 </div>
             </div>
 
-            <div class="options_shop">
+            <div class="options_shop headline">
                 <label for="front"> <i class="ph ph-arrow-up"></i>
                     <input type="radio" name="radio" id="front" checked="true">
                 </label>
@@ -72,11 +72,11 @@
         </div>
         
         <div class="comprar">
-            <div class="titulo_compra">
+            <div class="titulo_compra headline">
                 <h1>ADQUIRA</h1>
                 <h1>JÁ A SUA!</h1>
             </div>
-            <div class="detalhes_compra">
+            <div class="detalhes_compra headline">
                 <p>Tamanhos/Preços/Formas de pagamento </p>
                 <p>35,00 R$</p>
             </div>
@@ -84,7 +84,7 @@
                 <a target="_blank" href="https://docs.google.com/forms/d/1l4J_Al1huE4JS7H9f26OiLDei9ZSTl3KRdQ_BL3zMH4/viewform?edit_requested=true">CLique aqui</a>
             </div> --}}
 
-            <form action="/sendform" method="post">
+            <form action="/sendform" method="post" class="headline">
                 <div class="cpf active-form">
                     <label for="cpf"> CPF/CNPJ
                         <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00">
@@ -145,7 +145,7 @@
 </section>
 
 <section id="more">
-    <div class="more">
+    <div class="more headline">
         <div class="event_image">
             <img src="img/SAL_E_LUZ/Icons/coroa.svg" alt="coroa">
             <p class="p_01">O PRINCÍPIO E O FIM</p>
@@ -164,23 +164,23 @@
 
 <section id="programacao">
     <div class="programacao">
-        <div class="programacao-title">
+        <div class="programacao-title headline">
             <h1>PROGRAMAÇÃO</h1>
         </div>
-        <div class="programacao-conteudo">
+        <div class="programacao-conteudo ">
             <div class="programacao-itens">
                 <div class="programacao-item">
                     <span>1° dia</span>
                     <div class="programacao-detalhes">
-                        <div class="item">
+                        <div class="item headline">
                             <i class="ph ph-arrow-bend-down-right"></i>
                             <span>Culto Abertura</span>
                         </div>
-                        <div class="item">
+                        <div class="item headline">
                             <i class="ph ph-arrow-bend-down-right"></i>
                             <span>Louvores</span>
                         </div>
-                        <div class="item">
+                        <div class="item headline">
                             <i class="ph ph-arrow-bend-down-right"></i>
                             <span>Pregação</span>
                         </div>
@@ -189,7 +189,7 @@
                 <div class="programacao-item">
                     <span>2° dia</span>
                     <div class="programacao-detalhes">
-                        <div class="item">
+                        <div class="item headline">
                             <i class="ph ph-arrow-bend-down-right"></i>
                             <span>Continuação</span>
                         </div>
@@ -198,26 +198,26 @@
                 <div class="programacao-item">
                     <span>3° dia</span>
                     <div class="programacao-detalhes">
-                        <div class="item">
+                        <div class="item headline">
                             <i class="ph ph-arrow-bend-down-right"></i>
                             <span>Consagração</span>
                         </div>
-                        <div class="item">
+                        <div class="item headline">
                             <i class="ph ph-arrow-bend-down-right"></i>
                             <span>Coffe Break</span>
                         </div>
-                        <div class="item">
+                        <div class="item headline">
                             <i class="ph ph-arrow-bend-down-right"></i>
                             <span>Palestra</span>
                         </div>
-                        <div class="item">
+                        <div class="item headline">
                             <i class="ph ph-arrow-bend-down-right"></i>
                             <span>Culto de encerramento</span>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="programacao-imagens">
+            <div class="programacao-imagens headline">
                 <img src="img/SAL_E_LUZ/Fotos/01.png" alt="Foto evento">
                 <img src="img/SAL_E_LUZ/Fotos/2.webp" alt="Foto evento">
                 <span>VOCÊ NÃO PODE FICAR DE FORA!</span>
@@ -233,14 +233,14 @@
 <section id="oferta">
     <div class="oferta">
         <div class="titulo-oferta">
-            <div class="titulo">
+            <div class="titulo headline">
                 <h1>O</h1>
                 <h1>FER</h1>
                 <h1>TA</h1>
             </div>
             <span>voluntária</span>
         </div>
-        <div class="qrcode">
+        <div class="qrcode headline">
             <div class="qrcode-img">
                <img src="img/BACKGROUND/qrcode.png" alt="qrcode">
             </div>
@@ -256,7 +256,7 @@
 </section>
 
 <section id="mais-info">
-    <div class="mais-info">
+    <div class="mais-info headline">
         <div class="title-info">
             <h1>PARA SABER</h1>
             <h1><i class="ph ph-plus"></i> INFORMAÇÕES</h1>
