--- a/views/layouts/saleluz_new.handlebars
+++ b/views/layouts/saleluz_new.handlebars
@@ -9,6 +9,7 @@
     <title>Sal e luz 2023</title>
 </head>
 <body>
+    {{> loading}}
     {{> header_saleluz}}
     {{{body}}}
     <script src="https://unpkg.com/scrollreveal"></script>
