--- a/views/layouts/saleluz_new.handlebars
+++ b/views/layouts/saleluz_new.handlebars
@@ -5,13 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/sal_e_luz/sal_e_luz.css">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/sal_e_luz/sal_e_luz.js" defer></script>
+    <script
+        src="https://code.jquery.com/jquery-3.7.1.slim.js"
+        integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc="
+        crossorigin="anonymous">
+    </script>
+    <script src="js/sal_e_luz/window.js" defer></script>
     <title>Sal e luz 2023</title>
 </head>
 <body>
     {{> loading}}
     {{> header_saleluz}}
     {{{body}}}
-    <script src="https://unpkg.com/scrollreveal"></script>
+    
 </body>
 </html>
