--- a/views/saleluz_new.handlebars
+++ b/views/saleluz_new.handlebars
@@ -33,8 +33,8 @@
     </section>
 
     <section id="shop">
-        <div class="shop">
-            <div class="shop_imagem headline">
+        <div class="shop headline">
+            <div class="shop_imagem">
                 <div class="flip">
                     <div class="front">
                         <img src="img/SAL_E_LUZ/BLUSA_03.png" />
