--- a/views/saleluz_new.handlebars
+++ b/views/saleluz_new.handlebars
@@ -146,19 +146,19 @@
     </section>
 
     <section id="more">
-        <div class="more headline">
-            <div class="event_image">
-                <img src="img/SAL_E_LUZ/Icons/coroa.svg" alt="coroa">
-                <p class="p_01">O PRINCÍPIO E O FIM</p>
-                <div class="image-content">
-                    <div class="image">
-                        <img src="img/SAL_E_LUZ/Icons/lion.svg" alt="event_image">
+        <div class="more">
+            <div class="event_image headline_02">
+                <img src="img/SAL_E_LUZ/Icons/coroa.svg" alt="coroa" class="headline">
+                <p class="p_01" class="headline">O PRINCÍPIO E O FIM</p>
+                <div class="image-content headline_02">
+                    <div class="image headline_03" >
+                        <img src="img/SAL_E_LUZ/Icons/lion.svg"  alt="event_image">
                     </div>
-                    <h1>ELE VEM</h1>
+                    <h1 class="headline_02">ELE VEM</h1>
                 </div>
-                <p class="p_02">O PRIMEIRO E O ÚLTIMO</p>
-                <p class="p_03">EU SOU O ALFA E O ÔMEGA</p>
-                <span>Apocalipse: 22: 12 - 13</span>
+                <p class="p_02 headline_02">O PRIMEIRO E O ÚLTIMO</p>
+                <p class="p_03 headline">EU SOU O ALFA E O ÔMEGA</p>
+                <span class="headline_02"> Apocalipse: 22: 12 - 13</span>
             </div>
         </div>
     </section>
