--- a/views/layouts/saleluz_new.handlebars
+++ b/views/layouts/saleluz_new.handlebars
@@ -7,6 +7,10 @@
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/sal_e_luz/sal_e_luz.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" defer></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>    
+    <script src="js/swiper.js" defer></script>
+    
     <script
         src="https://code.jquery.com/jquery-3.7.1.slim.js"
         integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc="
@@ -19,6 +23,6 @@
     {{> loading}}
     {{> header_saleluz}}
     {{{body}}}
-    
+   
 </body>
 </html>
