--- a/views/saleluz_new.handlebars
+++ b/views/saleluz_new.handlebars
@@ -80,22 +80,29 @@
                     <p>35,00 R$</p>
                 </div>
 
+
+
+                {{!-- FORM SHOP --}}
+
                 <form action="/sendform" method="post" class="headline">
                     <div class="cpf active-form">
                         <label for="cpf"> CPF
-                            <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00" maxlength="11">
+                            <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00" maxlength="11" class="required">
+                            <span class="output_menssage"></span>
                         </label>
                     </div>
 
                     <div class="telefone">
                         <label for="telefone"> Telefone
-                            <input type="tel" id="telefone" name="contato" placeholder="00 00000-0000" >
+                            <input type="tel" id="telefone" name="contato" placeholder="00 00000-0000" class="required">
+                            <span class="output_menssage"></span>
                         </label>
                     </div>
 
                     <div class="nome">
                         <label for="nome"> Nome
-                            <input type="text" id="nome" name="nome" placeholder="digite" >
+                            <input type="text" id="nome" name="nome" placeholder="digite" class="required">
+                            <span class="output_menssage"></span>
                         </label>
                     </div>
                     <div class="produto">
@@ -103,7 +110,8 @@
                             <input type="hidden" name="idProduto" id="idProduto" value="1">
                         </label>
                         <label for="quantidade"> Quantidade
-                            <input type="number" id="quantidade" name="qtd" min="1" >
+                            <input type="number" id="quantidade" name="qtd" min="1" value="1"  class="required">
+                            <span class="output_menssage"></span>
                         </label>
 
                         <label for="tamanho"> Tamanhos
@@ -126,7 +134,7 @@
                         </label>
                     </div>
                     <div class="submit">
-                        <input type="submit" value="Reservar">
+                        <input type="submit" value="Reservar" >
                     </div>
                 </form>
                 <div class="shop_next">
